# formatter-examples

./: .clang-format  CMakeLists.txt
geometry/: CMakeLists.txt
geometry/include/geometry/: formatter.h  point.h  rect.h  vector.h
geometry/src/: formatter.cpp  point.cpp  rect.cpp  vector.cpp
src/: CMakeLists.txt  main.cpp
